<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>s-99</name>
	<groupId>jbaldassari</groupId>
	<artifactId>s-99</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.6</jdk.version>
		<scala.version>2.8.1</scala.version>
		<scala.plugin.version>2.13.1</scala.plugin.version>
		<scala.specs.artifactId>specs_2.8.1</scala.specs.artifactId>
		<scala.specs.version>1.6.7.2</scala.specs.version>
		<maven.plugins.surefire.version>2.4.3</maven.plugins.surefire.version>
		<maven.plugins.assembly.version>2.2-beta-2</maven.plugins.assembly.version>
		<junit.version>4.4</junit.version>
		<log4j.version>1.2.15</log4j.version>
	</properties>

	<scm>
		<connection>scm:git:git@github.com:jbaldassari/s-99.git</connection>
		<url>https://github.com/jbaldassari/s-99</url>
	</scm>

	<developers>
		<developer>
			<id>jbaldassari</id>
			<name>James Baldassari</name>
			<email>jbaldassari@gmail.com</email>
			<timezone>-5</timezone>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<repositories>
		<repository>
			<id>scala-tools.org</id>
			<name>Scala-tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</repository>
		<repository>
			<id>scala-tools.org-snapshot</id>
			<name>Scala-tools Maven2 Snapshot Repository</name>
			<url>http://scala-tools.org/repo-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>apache-releases</id>
			<name>Apache Releases repository</name>
			<url>https://repository.apache.org/content/repositories/releases</url>
		</repository>
		<repository>
			<id>apache-snapshot</id>
			<name>Apache Snapshot repository</name>
			<url>https://repository.apache.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>java.net</id>
			<name>java.net</name>
			<url>http://download.java.net/maven/2/</url> 
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>codehaus</id>
			<name>Codehaus</name>
			<url>http://repository.codehaus.org/</url> 
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>ibiblio.org</id>
			<name>ibiblio mirror</name>
			<url>http://mirrors.ibiblio.org/pub/mirrors/maven2/</url> 
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>googlecode</id>
			<name>Google code</name>
			<url>http://google-maven-repository.googlecode.com/svn/repository/</url> 
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>mirror.facebook.net</id>
			<name>Facebook mirror</name>
			<url>http://mirror.facebook.net/maven/repository/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>scala-tools.org</id>
			<name>Scala-tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.scala-tools.testing</groupId>
			<artifactId>${scala.specs.artifactId}</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-library</artifactId>
				<version>${scala.version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>org.scala-tools.testing</groupId>
				<artifactId>${scala.specs.artifactId}</artifactId>
				<version>${scala.specs.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.scala-tools</groupId>
					<artifactId>maven-scala-plugin</artifactId>
					<version>${scala.plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<jvmArgs>
							<jvmArg>-Xmx4g</jvmArg>
						</jvmArgs>
						<args>
							<arg>-unchecked</arg>
							<arg>-deprecation</arg>
						</args>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven.plugins.assembly.version}</version>
					<configuration>
						<tarLongFileMode>gnu</tarLongFileMode>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.plugins.surefire.version}</version>
					<configuration>
						<argLine>-Xmx4G -XX:MaxPermSize=256M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit</argLine>
						<useSystemClassLoader>false</useSystemClassLoader>
						<systemProperties>
							<property>
								<name>log4j.configuration</name>
								<value>test-log4j.xml</value>
							</property>
						</systemProperties>
						<includes>
							<include>**/*Test.java</include>
							<include>**/*Spec.java</include>
						</includes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<optimize>true</optimize>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

</project>
